packages/flutter_gemma_litertlm/native/litert_lm/include/engine.h

// Opaque pointer for the LiteRT LM Engine.
typedef struct LiteRtLmEngine LiteRtLmEngine;
// Opaque pointer for the LiteRT LM Session.
typedef struct LiteRtLmSession LiteRtLmSession;
// Opaque pointer for the LiteRT LM Responses.
typedef struct LiteRtLmResponses LiteRtLmResponses;
// Opaque pointer for the LiteRT LM Engine Settings.
typedef struct LiteRtLmEngineSettings LiteRtLmEngineSettings;
// Opaque pointer for the LiteRT LM Benchmark Info.
typedef struct LiteRtLmBenchmarkInfo LiteRtLmBenchmarkInfo;
// Opaque pointer for the LiteRT LM Conversation.
typedef struct LiteRtLmConversation LiteRtLmConversation;
// Opaque pointer for the LiteRT LM Conversation Optional Args.
typedef struct LiteRtLmConversationOptionalArgs
    LiteRtLmConversationOptionalArgs;
// Opaque pointer for a JSON response.
typedef struct LiteRtLmJsonResponse LiteRtLmJsonResponse;
// Opaque pointer for a detokenize result.
// Use `litert_lm_detokenize_result_delete` to free memory.
typedef struct LiteRtLmDetokenizeResult LiteRtLmDetokenizeResult;
// Opaque pointer for a tokenize result.
// Use `litert_lm_tokenize_result_delete` to free memory.
typedef struct LiteRtLmTokenizeResult LiteRtLmTokenizeResult;
// Represents the type of a TokenUnion.
typedef enum {
  kLiteRtLmTokenUnionTypeString = 0,
  kLiteRtLmTokenUnionTypeIds = 1,
} LiteRtLmTokenUnionType;
// Opaque pointer for LiteRT LM Token Union.
// Represents a single start or stop token, which could be either a string or a
// sequence of token ids.
// Use `litert_lm_token_union_delete` to free memory.
typedef struct LiteRtLmTokenUnion LiteRtLmTokenUnion;
// Opaque pointer for LiteRT LM Token Unions.
// Represents a collection of TokenUnion, typically used for model stop
// conditions.
// Use `litert_lm_token_unions_delete` to free memory.
typedef struct LiteRtLmTokenUnions LiteRtLmTokenUnions;
// Opaque pointer for LiteRT LM Session Config.
typedef struct LiteRtLmSessionConfig LiteRtLmSessionConfig;
// Opaque pointer for LiteRT LM Conversation Config.
typedef struct LiteRtLmConversationConfig LiteRtLmConversationConfig;
// Represents the type of sampler.
typedef enum {
  kLiteRtLmSamplerTypeUnspecified = 0,
  // Probabilistically pick among the top k tokens.
  kLiteRtLmSamplerTypeTopK = 1,
  // Probabilistically pick among the tokens such that the sum is greater
  // than or equal to p tokens after first performing top-k sampling.
  kLiteRtLmSamplerTypeTopP = 2,
  // Pick the token with maximum logit (i.e., argmax).
  kLiteRtLmSamplerTypeGreedy = 3,
} LiteRtLmSamplerType;
// Parameters for the sampler.
typedef struct {
  LiteRtLmSamplerType type;
  int32_t top_k;
  float top_p;
  float temperature;
  int32_t seed;
} LiteRtLmSamplerParams;
// Represents the type of input data.
typedef enum {
  kLiteRtLmInputDataTypeText,
  kLiteRtLmInputDataTypeImage,
  kLiteRtLmInputDataTypeImageEnd,
  kLiteRtLmInputDataTypeAudio,
  kLiteRtLmInputDataTypeAudioEnd,
} LiteRtLmInputDataType;
// Represents a single piece of input data.
typedef struct {
  LiteRtLmInputDataType type;
  // The data pointer. The interpretation depends on the `type`.
  // For kInputText, it's a UTF-8 string.
  // For kInputImage and kInputAudio, it's a pointer to the raw bytes.
  const void* data;
  // The size of the data in bytes.
  size_t size;
} LiteRtLmInputData;
// Callback for streaming responses.
// `callback_data` is a pointer to user-defined data passed to the stream
// function. `chunk` is the piece of text from the stream. It's only valid for
// the duration of the call. `is_final` is true if this is the last chunk in the
// stream. `error_msg` is a null-terminated string with an error message, or
// NULL on success.
typedef void (*LiteRtLmStreamCallback)(void* callback_data, const char* chunk,
                                       bool is_final, const char* error_msg);
// Returns the token ids from a token union.
//
// @param token_union The token union.
// @param out_tokens A pointer to receive the internal array of token ids.
//   The received pointer is valid only for the lifetime of the `token_union`
//   object.
// @param out_num_tokens A pointer to receive the number of token ids.
// @return 0 on success, non-zero if the type is not kLiteRtLmTokenUnionTypeIds.
LITERT_LM_C_API_EXPORT
int litert_lm_token_union_get_ids(const LiteRtLmTokenUnion* token_union,
                                  const int** out_tokens,
                                  size_t* out_num_tokens);
// Destroys a LiteRT LM Token Unions object.
//
// @param tokens The token unions object to destroy.
LITERT_LM_C_API_EXPORT
void litert_lm_token_unions_delete(LiteRtLmTokenUnions* tokens);
// Returns the number of token unions in the collection.
//
// @param tokens The token unions object.
// @return The number of token unions.
LITERT_LM_C_API_EXPORT
size_t litert_lm_token_unions_get_num_tokens(const LiteRtLmTokenUnions* tokens);
// Returns the token union at a given index from a collection.
//
// @param tokens The token unions collection.
// @param index The index of the token union.
// @return A pointer to the token union at the given index, or NULL if the index
//   is out of bounds. The caller is responsible for deleting the result using
//   `litert_lm_token_union_delete`.
LITERT_LM_C_API_EXPORT
LiteRtLmTokenUnion* litert_lm_token_unions_get_token_at(
    const LiteRtLmTokenUnions* tokens, size_t index);
// Returns the configured start token (BOS), if any.
//
// @param engine The engine instance.
// @return A pointer to the start token, or NULL if none configured. The caller
//   is responsible for deleting the result using
//   `litert_lm_token_union_delete`.
LITERT_LM_C_API_EXPORT
LiteRtLmTokenUnion* litert_lm_engine_get_start_token(LiteRtLmEngine* engine);
// Returns the configured stop tokens (EOS).
//
// @param engine The engine instance.
// @return A pointer to the stop tokens collection, or NULL if none configured.
//   The caller is responsible for deleting the result using
//   `litert_lm_token_unions_delete`.
LITERT_LM_C_API_EXPORT
LiteRtLmTokenUnions* litert_lm_engine_get_stop_tokens(LiteRtLmEngine* engine);