lib/core/ffi/litert_lm_bindings.dart


  int litert_lm_token_union_get_ids(
    ffi.Pointer<LiteRtLmTokenUnion> token_union,
    ffi.Pointer<ffi.Pointer<ffi.Int>> out_tokens,
    ffi.Pointer<ffi.Size> out_num_tokens,
  ) {
    return _litert_lm_token_union_get_ids(
      token_union,
      out_tokens,
      out_num_tokens,
    );
  }

  late final _litert_lm_token_union_get_idsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<LiteRtLmTokenUnion>,
              ffi.Pointer<ffi.Pointer<ffi.Int>>,
              ffi.Pointer<ffi.Size>)>>('litert_lm_token_union_get_ids');
  late final _litert_lm_token_union_get_ids =
      _litert_lm_token_union_get_idsPtr.asFunction<
          int Function(ffi.Pointer<LiteRtLmTokenUnion>,
              ffi.Pointer<ffi.Pointer<ffi.Int>>, ffi.Pointer<ffi.Size>)>();

  void litert_lm_token_unions_delete(
    ffi.Pointer<LiteRtLmTokenUnions> tokens,
  ) {
    return _litert_lm_token_unions_delete(
      tokens,
    );
  }

  late final _litert_lm_token_unions_deletePtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<LiteRtLmTokenUnions>)>>(
      'litert_lm_token_unions_delete');
  late final _litert_lm_token_unions_delete = _litert_lm_token_unions_deletePtr
      .asFunction<void Function(ffi.Pointer<LiteRtLmTokenUnions>)>();

  int litert_lm_token_unions_get_num_tokens(
    ffi.Pointer<LiteRtLmTokenUnions> tokens,
  ) {
    return _litert_lm_token_unions_get_num_tokens(
      tokens,
    );
  }

  late final _litert_lm_token_unions_get_num_tokensPtr = _lookup<
          ffi
          .NativeFunction<ffi.Size Function(ffi.Pointer<LiteRtLmTokenUnions>)>>(
      'litert_lm_token_unions_get_num_tokens');
  late final _litert_lm_token_unions_get_num_tokens =
      _litert_lm_token_unions_get_num_tokensPtr
          .asFunction<int Function(ffi.Pointer<LiteRtLmTokenUnions>)>();

  ffi.Pointer<LiteRtLmTokenUnion> litert_lm_token_unions_get_token_at(
    ffi.Pointer<LiteRtLmTokenUnions> tokens,
    int index,
  ) {
    return _litert_lm_token_unions_get_token_at(
      tokens,
      index,
    );
  }

  late final _litert_lm_token_unions_get_token_atPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<LiteRtLmTokenUnion> Function(
              ffi.Pointer<LiteRtLmTokenUnions>,
              ffi.Size)>>('litert_lm_token_unions_get_token_at');
  late final _litert_lm_token_unions_get_token_at =
      _litert_lm_token_unions_get_token_atPtr.asFunction<
          ffi.Pointer<LiteRtLmTokenUnion> Function(
              ffi.Pointer<LiteRtLmTokenUnions>, int)>();

  ffi.Pointer<LiteRtLmTokenUnion> litert_lm_engine_get_start_token(
    ffi.Pointer<LiteRtLmEngine> engine,
  ) {
    return _litert_lm_engine_get_start_token(
      engine,
    );
  }

  late final _litert_lm_engine_get_start_tokenPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<LiteRtLmTokenUnion> Function(
                  ffi.Pointer<LiteRtLmEngine>)>>(
      'litert_lm_engine_get_start_token');
  late final _litert_lm_engine_get_start_token =
      _litert_lm_engine_get_start_tokenPtr.asFunction<
          ffi.Pointer<LiteRtLmTokenUnion> Function(
              ffi.Pointer<LiteRtLmEngine>)>();

  ffi.Pointer<LiteRtLmTokenUnions> litert_lm_engine_get_stop_tokens(
    ffi.Pointer<LiteRtLmEngine> engine,
  ) {
    return _litert_lm_engine_get_stop_tokens(
      engine,
    );
  }

  late final _litert_lm_engine_get_stop_tokensPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<LiteRtLmTokenUnions> Function(
                  ffi.Pointer<LiteRtLmEngine>)>>(
      'litert_lm_engine_get_stop_tokens');
  late final _litert_lm_engine_get_stop_tokens =
      _litert_lm_engine_get_stop_tokensPtr.asFunction<
          ffi.Pointer<LiteRtLmTokenUnions> Function(
              ffi.Pointer<LiteRtLmEngine>)>();
}

final class LiteRtLmEngine extends ffi.Opaque {}

final class LiteRtLmSession extends ffi.Opaque {}

final class LiteRtLmResponses extends ffi.Opaque {}

final class LiteRtLmEngineSettings extends ffi.Opaque {}

final class LiteRtLmBenchmarkInfo extends ffi.Opaque {}

final class LiteRtLmConversation extends ffi.Opaque {}

final class LiteRtLmConversationOptionalArgs extends ffi.Opaque {}

final class LiteRtLmJsonResponse extends ffi.Opaque {}

final class LiteRtLmDetokenizeResult extends ffi.Opaque {}

final class LiteRtLmTokenizeResult extends ffi.Opaque {}

enum LiteRtLmTokenUnionType {
  kLiteRtLmTokenUnionTypeString(0),
  kLiteRtLmTokenUnionTypeIds(1);

  final int value;
  const LiteRtLmTokenUnionType(this.value);

  static LiteRtLmTokenUnionType fromValue(int value) => switch (value) {
        0 => kLiteRtLmTokenUnionTypeString,
        1 => kLiteRtLmTokenUnionTypeIds,
        _ => throw ArgumentError(
            'Unknown value for LiteRtLmTokenUnionType: $value'),
      };
}

final class LiteRtLmTokenUnion extends ffi.Opaque {}

final class LiteRtLmTokenUnions extends ffi.Opaque {}

final class LiteRtLmSessionConfig extends ffi.Opaque {}

final class LiteRtLmConversationConfig extends ffi.Opaque {}

enum LiteRtLmSamplerType {
  kLiteRtLmSamplerTypeUnspecified(0),
  kLiteRtLmSamplerTypeTopK(1),
  kLiteRtLmSamplerTypeTopP(2),
  kLiteRtLmSamplerTypeGreedy(3);

  final int value;
  const LiteRtLmSamplerType(this.value);

  static LiteRtLmSamplerType fromValue(int value) => switch (value) {
        0 => kLiteRtLmSamplerTypeUnspecified,
        1 => kLiteRtLmSamplerTypeTopK,
        2 => kLiteRtLmSamplerTypeTopP,
        3 => kLiteRtLmSamplerTypeGreedy,
        _ =>
          throw ArgumentError('Unknown value for LiteRtLmSamplerType: $value'),
      };
}

final class LiteRtLmSamplerParams extends ffi.Struct {
  @ffi.UnsignedInt()
  external int typeAsInt;

  LiteRtLmSamplerType get type => LiteRtLmSamplerType.fromValue(typeAsInt);

  @ffi.Int32()
  external int top_k;

  @ffi.Float()
  external double top_p;

  @ffi.Float()
  external double temperature;

  @ffi.Int32()
  external int seed;
}

enum LiteRtLmInputDataType {
  kLiteRtLmInputDataTypeText(0),
  kLiteRtLmInputDataTypeImage(1),
  kLiteRtLmInputDataTypeImageEnd(2),
  kLiteRtLmInputDataTypeAudio(3),
  kLiteRtLmInputDataTypeAudioEnd(4);

  final int value;
  const LiteRtLmInputDataType(this.value);

  static LiteRtLmInputDataType fromValue(int value) => switch (value) {
        0 => kLiteRtLmInputDataTypeText,
        1 => kLiteRtLmInputDataTypeImage,
        2 => kLiteRtLmInputDataTypeImageEnd,
        3 => kLiteRtLmInputDataTypeAudio,
        4 => kLiteRtLmInputDataTypeAudioEnd,
        _ => throw ArgumentError(
            'Unknown value for LiteRtLmInputDataType: $value'),
      };
}

final class LiteRtLmInputData extends ffi.Struct {
  @ffi.UnsignedInt()
  external int typeAsInt;

  LiteRtLmInputDataType get type => LiteRtLmInputDataType.fromValue(typeAsInt);

  external ffi.Pointer<ffi.Void> data;

  @ffi.Size()
  external int size;
}

typedef LiteRtLmStreamCallbackFunction = ffi.Void Function(
    ffi.Pointer<ffi.Void> callback_data,
    ffi.Pointer<ffi.Char> chunk,
    ffi.Bool is_final,
    ffi.Pointer<ffi.Char> error_msg);
typedef DartLiteRtLmStreamCallbackFunction = void Function(
    ffi.Pointer<ffi.Void> callback_data,
    ffi.Pointer<ffi.Char> chunk,
    bool is_final,
    ffi.Pointer<ffi.Char> error_msg);
typedef LiteRtLmStreamCallback
    = ffi.Pointer<ffi.NativeFunction<LiteRtLmStreamCallbackFunction>>;
